[PROJECT][ADD] Prepare layers

--- a/WPF_IDOT_Project.csproj
+++ b/WPF_IDOT_Project.csproj
@@ -4,6 +4,19 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Authors>antoine.gonzalez, sander.julien-saint-amand</Authors>
+    <Version>0.1.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+    <Folder Include="BusinessManagement\" />
+    <Folder Include="Dbo\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
 
 </Project>
