--- a/WPF_IDOT_Project.csproj
+++ b/WPF_IDOT_Project.csproj
@@ -6,13 +6,14 @@
     <UseWPF>true</UseWPF>
     <Authors>antoine.gonzalez, sander.julien-saint-amand</Authors>
     <Version>0.1.0</Version>
+    <ApplicationIcon>Resources/icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="DataAccess\" />
     <Folder Include="BusinessManagement\" />
     <Folder Include="Dbo\" />
-    <Folder Include="Views\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
   <ItemGroup>
