--- a/WPF_Client/WPF_Client.csproj
+++ b/WPF_Client/WPF_Client.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -72,11 +75,39 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BusinessManagement\Article.cs" />
+    <Compile Include="BusinessManagement\User.cs" />
+    <Compile Include="DataAccess\Article.cs" />
+    <Compile Include="DataAccess\ProjectDBEntities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProjectDBEntities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\ProjectDBEntities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProjectDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\ProjectDBEntities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ProjectDBEntities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\T_Article.cs">
+      <DependentUpon>ProjectDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\T_User.cs">
+      <DependentUpon>ProjectDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\User.cs" />
     <Compile Include="Dbo\Article.cs" />
     <Compile Include="Dbo\User.cs" />
     <Compile Include="Viewmodel\MainViewModel.cs" />
     <Compile Include="View\ArticleListPage.xaml.cs">
       <DependentUpon>ArticleListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ArticleWritePage.xaml.cs">
+      <DependentUpon>ArticleWritePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -103,6 +134,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="DataAccess\ProjectDBEntities.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ProjectDBEntities.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DataAccess\ProjectDBEntities.edmx.diagram">
+      <DependentUpon>ProjectDBEntities.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -112,10 +150,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BusinessManagement\" />
-    <Folder Include="DataAccess\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resource\Img\home.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -138,10 +173,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
+    <Content Include="DataAccess\ProjectDBEntities.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ProjectDBEntities.edmx</DependentUpon>
+      <LastGenOutput>ProjectDBEntities.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataAccess\ProjectDBEntities.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ProjectDBEntities.edmx</DependentUpon>
+      <LastGenOutput>ProjectDBEntities.cs</LastGenOutput>
+    </Content>
     <Content Include="Resource\database.sql" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="View\ArticleListPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ArticleWritePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -153,6 +202,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
